# tierkreis-tutorial

./: .envrc  .gitignore  README.md  devenv.nix  pyproject.toml
tkr/exercises/: exercise1.ipynb  exercise2.ipynb
tkr/exercises/solutions/: exercise1.ipynb  exercise2.ipynb
tkr/graphs/: cpp_guppy_main.py  from_one_to_many.py  guppy_main.py  pytket_main.py
tkr/workers/cpp_worker/: CMakeLists.txt  README.md  api.py  api.tsp  generate_stubs.py  main.cpp  pyproject.toml  tkr-cpp-worker
tkr/workers/new_worker/: README.md  pyproject.toml
tkr/workers/new_worker/api/: README.md  api.py  pyproject.toml
tkr/workers/new_worker/tkr_new_worker_impl/: __init__.py  impl.py  main.py
tkr/workers/old_worker/: README.md  pyproject.toml
tkr/workers/old_worker/api/: README.md  api.py  pyproject.toml
tkr/workers/old_worker/tkr_old_worker_impl/: impl.py  main.py
tkr/workers/reference_worker/: README.md  pyproject.toml
tkr/workers/reference_worker/api/: README.md  api.py  pyproject.toml
tkr/workers/reference_worker/tkr_reference_worker_impl/: impl.py  main.py
