[project]
name = "tkr-cpp-worker"
version = "0.1.0"
description = "A tierkreis worker api."
requires-python = ">=3.12"
authors = [ {name = "Your Name", email = "you@example.com"} ]
dependencies = [
    "tierkreis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"api.py" = "cpp_worker.py"

[tool.uv.sources]
tkr-new-worker = { workspace = true }
tierkreis = { git = "https://github.com/Quantinuum/tierkreis", subdirectory = "tierkreis" }
