[project]
name = "tkr-old-worker"
version = "0.1.0"
description = "A tierkreis worker api."
readme = "README.md"
requires-python = ">=3.12"
authors = [ {name = "Your Name", email = "you@example.com"} ]
dependencies = [
    "tierkreis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"api.py" = "old_worker.py"

